[package]
name = "star-prism"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "The go to utility for browsing and extracting Star Engine games."
authors = ["Stryxus <11709044+Stryxus@users.noreply.github.com>"]
repository = "https://github.com/Stryxus-Web/StarPrism"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
# zstd = { version = "0.13.1", default-features = false, features = ["wasm", "thin", "arrays"] }
zstd = { git = "https://github.com/jbms/zstd-rs.git", branch = "fix-wasm32-unknown-unknown", default-features = false, features = [ "wasm", "thin", "arrays" ] }
async-compression = { version = "0.4.8", zstd = true }
tar = "0.4.40"
web-sys = { version = "0.3.69", features = [ "Window", "Document", "HtmlInputElement", "Event", "FileList", "File" ] }

[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
